fix(task): 调整 QQVIP 同步任务的定时表达式并优化同步逻辑
将 `ScanQQVIPLikeMusicTask` 中的定时任务 cron 表达式由 "1 */10 * * * ? "调整为 "0 */10 * * * ? "，以避免边界时间执行问题。同时移除方法上的 synchronized 关键字，
改用更细粒度的控制方式来保证线程安全。

在同步歌手、专辑和歌单时增加对已下载内容的过滤判断，防止重复下载。重构了部分去重逻辑，
提升代码可读性和运行效率。此外，统一了各同步方法的访问修饰符，增强代码一致性。更新应用版本号从 3.0.13 到 3.0.14。